site is published

--- a/rc07_language-cards/package.json
+++ b/rc07_language-cards/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://barbaros163.github.io/language_cards_react",
+  "homepage": "https://barbaros163.github.io/02_Language_Cards_React/",
   "name": "rc07_language-cards",
   "version": "0.1.0",
   "private": true,
